--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1271,7 +1271,7 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 ### Analysis in relation to existing research on related design toolsets
 
 
-#### Comparing to Scratch and Microworlds
+#### Comparing design to Scratch and Microworlds
 
 This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
 
@@ -1287,26 +1287,29 @@ NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
 <!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
-In this design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be  self-contained, the use of a JZ library in a web coding environment is more open-ended.
+**How my design differs in terms of tool set**
+
+
+In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be  self-contained, the use of a JZ library in a web coding environment is more open-ended.
+
+In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
 
 The clear software-based self-containment has clear advantages of control and reducing possibility for compounding errors.
 
+**Discussion on design principles / heuristics  community design and guiding community behaviours :**
 
+While Resnick's principles  heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
 
+Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
 
-**How Resnick's design principles / heuristics differ from use of GDPs and processes in this chapter:**
-
-While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices.
-
-**Community design and guiding community behaviours :**
-
-In addition, scratch also expanded the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
+In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/
 
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
 
-This was picked up on by the community as they viewed each others assets and playtested games.
+The community element of the design is explored in chapter six. While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
+- the community as they viewed each others assets and playtested games.
 
-While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask particant to focus their attention in this direction.
+
 
 
 LINK -
