--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1086,7 +1086,7 @@ My motivations for this intervention were that it encourage a sense of community
 
 The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
 
-Despite minimal evidence due to afactor later explored, there were some observations.
+Despite minimal evidence due to a factor later explored, there were some observations.
 
 
 
@@ -1290,11 +1290,21 @@ NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
 **How my design differs in terms of tool set**
 
 
-In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be  self-contained, the use of a JZ library in a web coding environment is more open-ended.
+In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended.
 
 In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
 
-The clear software-based self-containment has clear advantages of control and reducing possibility for compounding errors.
+While in P2 and P3 I reduced the the numnber of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
+
+The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment. 
+
+I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntaxt and the structure of the game code.
+
+The design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+
+The following issues are relevant to the learner experience- other ways to enclose / protect )
+- Issue of the comlexity of support and technical documentation
+
 
 **Discussion on design principles / heuristics  community design and guiding community behaviours :**
 
