--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1289,22 +1289,21 @@ NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
 
 **How my design differs in terms of tool set**
 
-
 In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended.
 
 In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
 
-While in P2 and P3 I reduced the the numnber of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
+While in P2 and P3 I reduced the the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
 
-The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment. 
+The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment.
 
-I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntaxt and the structure of the game code.
+I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
 
-The design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
 
 The following issues are relevant to the learner experience- other ways to enclose / protect )
-- Issue of the comlexity of support and technical documentation
-
+- Issue of the complexity of support and technical documentation
+-
 
 **Discussion on design principles / heuristics  community design and guiding community behaviours :**
 
@@ -1318,8 +1317,6 @@ In my design, the use of GDPs in various scope forms this base: quick start acti
 
 The community element of the design is explored in chapter six. While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
 - the community as they viewed each others assets and playtested games.
-
-
 
 
 LINK -
