chipping at terms and design chapter

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -148,9 +148,9 @@ The game making community is not authentic or mature in the practices they are u
 
 One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that.
 
-As explored in other chapters X, there is a gulf between instruction based tutorials and more open create your own game challenges in project work.
+As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s.
 
-This chapter charts this tension and the evolutions of resources which ended up trying to occupy this middle ground between instruction and (overwhelmingly) free choice.
+This chapter charts the evolution of resources which occupy this middle ground between instruction and free choice creative approaches.
 
 <!-- **Methodology for exposing tensions**
 
@@ -266,12 +266,9 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
-### Outline of Game Making Tools used in this vignette - ANY SPACE IN LIT REVIEW?
 
-These tools are of use by both professionals and novice coders. The use by indy communities blurs the line also.
 
-EDIT THIS DOWN AND REFER TO GLOSSARY AND LATER SECTION
-
+<!--
 #### Code Playgrounds
 
 Find definition
@@ -279,13 +276,15 @@ Find definition
 NOTES ON CODE PLAYGROUNDS
 However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
 
-#### Online graphics editors - Piskel
+#### Online graphics editors - Piskel -->
 
 
 
 ### Context of  Vignette
 
-The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
+The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently on his game design. The tool shown in screenshots is the code playground glitch. As explored in the literature review, code playgrounds are 
+
+He as used an on
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 ### Commentary on Vignette
@@ -1293,7 +1292,7 @@ In my design the tools set is distinct from tools like Scratch, Logo in that whi
 
 In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
 
-While in P2 and P3 I reduced the the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
+While in P2 and P3 I reduced the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
 
 The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment.
 
