on vignette and activity levels

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -266,8 +266,6 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
-
-
 <!--
 #### Code Playgrounds
 
@@ -282,83 +280,30 @@ However in its styling it is playful and editorial picks and write up celebrate 
 
 ### Context of  Vignette
 
-The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently on his game design. The tool shown in screenshots is the code playground glitch. As explored in the literature review, code playgrounds are 
-
-He as used an on
+The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently on his game design. The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary).
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
+
 ### Commentary on Vignette
 
+This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design. It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals. Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis.
 
-This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design.
-It will signpost to where tensions in the activity system are explored in this chapter.  
+<!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
 
+<!-- A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there. -->
 
-
-<!-- This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress. -->
-
-<!-- In phase one I worked with learners when they were creating a wish list of game features to add to their game. -->
-
-
-<!-- I also carried out four video-recorded interviews with practitioners who work with creative methods and technology with young people or families. Early analysis of these interviews has helped shape the evolving design of my programme and has brought into focus key areas of interest already identified in journal entries. -->
-
-
-
-<!-- These aspects inform the first half of the next chapter which addresses the process of creating an inclusive creative coding environment. -->
-
-<!--
-**Learners may feel alienated from coding as a practice and need a way into the process.**
-Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role. -->
-
-
-<!-- #### Building Identities as Game Makers (dropped) -->
-
-<!-- NOTE - MAY NEED TO REWRITE to clearly precursor next chapter -->
-
-
-<!-- One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing. -->
-<!--
-My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals.
-
-In doing this I have taken inspiration from Bartle's game player types [@hamari_player_2014].
-EXPLAIN HOW.  
-Side missions or side quests are also used in open world games are used in part to appeal to different kinds of players [@bartle_hearts_nodate].
-
-I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
-
- -   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
- - **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
- -   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
- -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users -->
-
-
-
-<!-- there's a limit here as the drama scenario is done on people already engaged
-so there's a problem in getting any data from this
-however the rationale is intact and  -->
-
-
-
-
-## Description of the nested levels of activity & tools used - CHANGE TO MOSTLY SIGN POSTING - EDIT DOWN
-
-<!-- REWRITE THE BELOW - CHANGE FOCUS TO TOOLS /RESOURCES -->
-
-Activity Theory allows researchers to identify intersecting or nested systems of activity with varied goals. These descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole].
-
-Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
-A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there.
-
-#### Environmental Factors and Objectives
+#### Environmental factors and objectives
 
 There are several wider objectives of activity which may vary  including; parents facilitating coding and design learning for children, the children's motivations of being part of a fun club-like programme, and my own motivation of conducting research.
 
 ![At Dia Environmental ](./Pictures/At_dia_3_v1.png){width=95%}
 
-More shared objectives exist within these wider aims and include: a larger-scoped objective of the group creating games which is fun to share and play, intermediate goals of identifying and implementing key game features to add to individual games; and narrow objectives involving creating or altering game assets and code constructs.
+NOTE - CAN ADD THE OBJECTIVES INTO THE ARROWS ON THE DIAGRAM
+
+High-level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills; and fun on the part of the children participants.
+
 
 <!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
-
 
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
@@ -373,29 +318,28 @@ More shared objectives exist within these wider aims and include: a larger-scope
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
-#### Shared larger objective - Making games for an audience
+#### Larger objective - Making games for an audience
 
-In this larger scoped activity system the direct objective of the activity is to make games which are fun for the intended audience to play and which explores an environmental theme.
+The shared objective of one activity system is to make entertaining and educational games for an audience to play.
 
-As previously indicated, other high level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills.
-
-Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
+<!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
 
 ![At Dia 1](./Pictures/At_dia_2_v1.png){width=95%}
 
-In exploring the community of the activity system.
+The imagined end users are students and staff in the Manchester Met Brooks building where their games are  shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online.
 
-While the primary audience for the created games are peers via ongoing informal testing, the theoretical end users are students and staff in the Manchester Met Brooks building where their games will be shared in arcade cabinets.
+![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
 
-![Carrot Eater](./Pictures/carroteater2.jpg){width=95%}
+<!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
 
-In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.   
+The more immediate audience for the evolving games are peer game makers during the making sessions. In the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed.
 
-Toby begins the game making session playing his own game which he has developed from a shared starting template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed.
+This scope of activity can be is continued in chapter six.
 
-Analysis of this scope of activity is continued in chapter six.
+#### Mid-level objective - Implementing game elements
 
-#### Smaller objective - Implementing game elements
+The process of making a game was driven learners setting goals and requesting help to implement game features. This level of implementing
+The process can involves a diversity of tools and resources depending on the feature involved and the preferred approach of the learner. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -412,10 +356,10 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
-The process of making a game was driven from early stages by learners requests to implement game features which followed freely with little prompting.
+<!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
+By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
 
-By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
-
+By this stage, a collection or menu of elements or design patterns (see chapter two and glossary)for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
 In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of resources.
 
@@ -423,13 +367,7 @@ Toby then browses the web page of a menu of game design patterns and selects mov
 
 Other participants were less proficient using this online resources and used printed out versions of documentation.
 
-**Scope of activity:** While other interpretations are possible which view the implementation of each pattern as a form of action with each activity system, I have chosen to privilege this as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process.
-
-<!-- Explore the dividing line  -->
-
-As explored in the previous chapter, Barab and colleagues, outline the value of a more granular approach to analysis of nested activity systems.
-
-In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern.
+<!-- In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern. -->
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**         
 |----------------|-----------|------------|
@@ -442,10 +380,9 @@ In the next section narrower actions still within this system are explored as di
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-**Narrower Actions - Implementing discrete code and design structures**
+#### Smaller objective / actions - Implementing discrete code and design structures
 
 While some game patterns were simple to add to to alter, other more complicated features involved several stages in implementation. For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element.
-
 
 Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
 
@@ -454,21 +391,9 @@ In this example he is competent in the process of comparing the own code to the 
 Others in the group did not experiment in this way and used more direct help or detailed written instructions.
 
 
-<!-- - larger - learning computing skills and concepts as a home education project
-- larger - participating with other home educators in a creative environment and thus building team and communication skills
-- larger - learning transferable design skills and processes
-- large - creating a game which is fun to play and communicate an environmental theme
-- medium - identifying and implementing key game features (Game Design Patterns) to add to the games
-- smaller - creating, changing and transporting game assets to enact or change GDPs
-- smaller - implementing or changing code constructs to enact or change GDPs -->
-
-
-<!-- ### Commentary the use of AT scopes in data analysis
-
 <!-- NOTE
 Each of these with differing levels of abstraction.
 Break down that of GDPs? -->
-
 
 <!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
 
@@ -477,8 +402,14 @@ This has utility to both researcher and learning designer. The observations of t
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
 
-
 ### Exploring game design patterns and germ cell of activity
+
+**Scope of activity:** While other interpretations are possible which view the implementation of each pattern as a form of action with each activity system, I have chosen to privilege this as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process.
+
+<!-- Explore the dividing line  -->
+
+As explored in the previous chapter, Barab and colleagues, outline the value of a more granular approach to analysis of nested activity systems.
+
 
 NOTE - Proposed new location to first introduce this idea.  Evaluate
 
@@ -486,7 +417,7 @@ P1 working practices yielded new ways of working and resources. Key elements inc
 
 Explain - Unit of analysis for upcoming chapters.
 
-The small, quick start activities used to kick start activity  game makers were an evolution from  the full process of adding a game pattner. The proposed code modification instead of new code structures accelerated the process.
+The small, quick start activities used to kick start activity  game makers were an evolution from  the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
 
 The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
 
