--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -5,12 +5,6 @@
     research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Outline of Game Making Tools used in this vignette - ANY SPACE
-        IN LIT
-        REVIEW?](#outline-of-game-making-tools-used-in-this-vignette---any-space-in-lit-review)
-        -   [Code Playgrounds](#code-playgrounds)
-        -   [Online graphics editors -
-            Piskel](#online-graphics-editors---piskel)
     -   [Context of Vignette](#context-of-vignette)
 -   [Description of the nested levels of activity & tools used - CHANGE
     TO MOSTLY SIGN POSTING - EDIT
@@ -88,8 +82,8 @@
         process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
     -   [Analysis in relation to existing research on related design
         toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
-        -   [Comparing to Scratch and
-            Microworlds](#comparing-to-scratch-and-microworlds)
+        -   [Comparing design to Scratch and
+            Microworlds](#comparing-design-to-scratch-and-microworlds)
         -   [Authentic tool use and instrumental
             agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
