--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -359,7 +359,9 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 <!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
 
-By this stage, a collection or menu of elements or design patterns (see chapter two and glossary)for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
+NOTE - how much from p1-4 below to include?
+
+By this stage, a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
 In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of resources.
 
